# pave_scavenger_hunt

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
pave/: asgi.py  settings.py  wsgi.py
pave_scavenger_hunt/: manage.py  pyproject.toml  requirements.txt
pave_scavenger_hunt/pave/: asgi.py  settings.py  urls.py  wsgi.py
pave_scavenger_hunt/scavenger_hunt/: admin.py  models.py  urls.py  views.py
pave_scavenger_hunt/scavenger_hunt/migrations/: 0001_initial.py  0002_auto_20210125_2224.py  0003_auto_20210126_2335.py
pave_scavenger_hunt/static/: base.css  carousel.css
pave_scavenger_hunt/staticfiles/: base.844fe7f6adc2.css  carousel.6c7632d6e257.css  staticfiles.json
pave_scavenger_hunt/templates/: about.html  activate_account_sent.html  base.html  completed.html  extras.html  home.html  login.html  navigation-bar.html  questions.html  signup.html  starting.html
scavenger_hunt/: admin.py  apps.py  forms.py  models.py  tokens.py  urls.py  views.py
static/: base.css  carousel.css
staticfiles/: base.2a50ae207348.css  base.7c241e604950.css  base.856a38efb260.css  base.ad1839b0edbf.css  base.bd5e48975c27.css  base.css  base.e7edc1aaac7a.css  base.f3d51a448c7b.css  base.f727bb017f5d.css  carousel.ae5f65dc57a3.css  carousel.b85ac0d470ef.css  staticfiles.json
templates/: about.html  activate_account_email.html  activate_account_invalid.html  activate_account_sent.html  base.html  completed.html  extras.html  home.html  login.html  navigation-bar.html  questions.html  signup.html  starting.html
(+13 files in other folders)
