[tool.poetry]
name = "pave_scavenger_hunt"
version = "0.1.0"
description = ""
authors = ["Robert Radford <RobertR928@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
whitenoise = "^5.2.0"
six = "^1.15.0"
requests = "^2.25.1"
gunicorn = "^20.0.4"
djangorestframework = "^3.12.2"
django-environ = "^0.4.5"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
